# echo

./: README.md  deno.json  index.html  overlay.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: releases.md
src/: App.svelte  Overlay.svelte  app.css  main.ts  overlay.ts
src-tauri/: Cargo.toml  Info.plist  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  engine.rs  focus.rs  history.rs  lib.rs  main.rs  models.rs  session.rs  settings.rs  state.rs  typing.rs
src/components/: AccessibilityBanner.svelte  ErrorBanner.svelte  Header.svelte  Nav.svelte  UpdateBanner.svelte
src/components/history/: HistorySection.svelte
src/components/settings/: HotkeyCapture.svelte  InsertionSection.svelte  ModelList.svelte  SystemSection.svelte
src/components/shared/: ToggleGroup.svelte
src/lib/: api.ts  devMock.ts  i18n.svelte.ts  utils.ts
