[package]
name = "greffe"
version = "0.1.0"
description = "Dictée vocale locale — maintenez une touche, parlez, le texte s'écrit."
authors = ["Léo Martin"]
edition = "2021"

[lib]
name = "greffe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
cpal = "0.18"
enigo = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
sys-locale = "0.3"
# time 0.3.48 casse la cohérence de trait des crates en aval
# (impl From<X> for <X as ModifierValue>::Type) → E0119 dans tauri-utils/cookie.
# Contrainte à retirer quand une version corrigée sortira.
time = { version = ">=0.3.36, <0.3.48", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
transcribe-rs = { version = "0.3", features = ["onnx", "whisper-cpp", "whisper-metal"] }
macos-accessibility-client = "0.0.1"
accessibility-sys = "0.2"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = "0.25"

[target.'cfg(not(target_os = "macos"))'.dependencies]
transcribe-rs = { version = "0.3", features = ["onnx", "whisper-cpp"] }

[profile.release]
lto = true
codegen-units = 1
