[package]
name = "echo"
version = "0.1.0"
description = "Dictée vocale locale — maintenez une touche, parlez, le texte s'écrit."
authors = ["Léo Martin"]
edition = "2021"

[lib]
name = "echo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
cpal = "0.18"
enigo = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
sys-locale = "0.3"
# time 0.3.48 casse la cohérence de trait des crates en aval
# (impl From<X> for <X as ModifierValue>::Type) → E0119 dans tauri-utils/cookie.
# Contrainte à retirer quand une version corrigée sortira.
time = { version = ">=0.3.36, <0.3.48", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
transcribe-rs = { version = "0.3", features = ["onnx", "whisper-cpp", "whisper-metal"] }
macos-accessibility-client = "0.0.1"
accessibility-sys = "0.2"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = "0.25"

[target.'cfg(not(target_os = "macos"))'.dependencies]
transcribe-rs = { version = "0.3", features = ["onnx", "whisper-cpp"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# Enable broad lint coverage, then selectively allow what the project needs.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allowed: too noisy or not applicable to this project.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"
wildcard_imports = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
unreadable_literal = "allow"
unseparated_literal_suffix = "allow"
# Allowed: Tauri commands require specific signatures.
unused_async = "allow"
# Allowed: too many false positives on platform-gated code.
doc_markdown = "allow"
# Allowed: PoisonError::into_inner is the standard Mutex recovery idiom.
redundant_closure_for_method_calls = "allow"
# Allowed: package metadata is not required for an application.
cargo_common_metadata = "allow"
# Allowed: the worker function is intentionally long (single dictation session).
too_many_lines = "allow"
# Allowed: channel/mutex ownership patterns are idiomatic for audio threading.
needless_pass_by_value = "allow"
significant_drop_tightening = "allow"
# Allowed: style preferences that don't affect correctness.
suboptimal_flops = "allow"
missing_const_for_fn = "allow"
map_unwrap_or = "allow"
items_after_statements = "allow"
duration_suboptimal_units = "allow"
manual_is_multiple_of = "allow"
assigning_clones = "allow"
